--- a/src/assets/less/mixin.less
+++ b/src/assets/less/mixin.less
@@ -1,4 +1,111 @@
 //base
+/* project style */
+/* m_表示模块 */
+/* f_表示功能 */
+/* u_表示UI */
+
+.m_out {
+    width: 100%;
+    min-width: 1080px;
+  }
+  .m_in {
+    width:1080px;
+    margin: 0 auto;
+  }
+  .f_clear {
+    zoom: 1;
+  }
+  .f_clear:before,
+  .f_clear:after {
+    display: table;
+    content: '';
+  }
+  .f_clear:after {
+    clear: both;
+  }
+  .f_dib {
+    display: inline-block;
+    zoom: 1;
+    *display: inline;
+    _display: inline;
+  }
+  .f_dbk {
+    display: block;
+  }
+  .f_hide{
+    display: none;
+  }
+  .f_tal {
+    text-align: left;
+  }
+  .f_tac {
+    text-align: center;
+  }
+  .f_tar {
+    text-align: right;
+  }
+  .f_filter {
+    opacity: .5;
+    filter: alpha(opacity=50);
+    -moz-opacity: .5;
+    -khtml-opacity: .5;
+  }
+  .f_hdmx {
+    overflow: hidden;
+    white-space: nowrap;
+    text-overflow: ellipsis;
+  }
+  .f_float {
+    display: inline-block;
+    display: inline-block;
+    zoom: 1;
+    *display: inline;
+    _display: inline;
+    text-spacing: -3px;
+  }
+  .f_left {
+    float: left;
+  }
+  .f_right {
+    float: right;
+  }
+  /*修复margin-top被父元素‘继承’问题*/
+  .f_topbdr {
+    border-top: 1px solid transparent;
+  }
+  .f_disselected {
+    -webkit-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
+  }
+  .box_shadow {
+    box-shadow: 0px 1px 5px 0px rgba(9, 2, 4, 0.3);
+    -moz-box-shadow: 0px 1px 5px 0px rgba(9, 2, 4, 0.3);
+    /*firefox*/
+    -webkit-box-shadow: 0px 1px 5px 0px rgba(9, 2, 4, 0.3);
+    /*webkit*/
+  }
+  .box_shadow_2 {
+    box-shadow: 0px 1px 5px 0px rgba(9, 2, 4, 0.2);
+    -moz-box-shadow: 0px 1px 5px 0px rgba(9, 2, 4, 0.2);
+    /*firefox*/
+    -webkit-box-shadow: 0px 1px 5px 0px rgba(9, 2, 4, 0.2);
+    /*webkit*/
+  }
+  .icon {
+    vertical-align: top;
+    display: inline-block;
+    zoom: 1;
+    *display: inline;
+    _display: inline;
+  }
+  
+  [v-cloak] {
+    display: none;
+  }
+
+//new
 .vui-left {
   float: left;
 }
@@ -25,22 +132,10 @@
   user-select: none;
 }
 
-.vui-shade {
-  z-index: 999999;
-  width: 100%;
-  height: 100%;
-  position: fixed;
-  top: 0;
-  left: 0;
-  background: @bg-shade;
+.vui-title{
+    font-size: @font-size;
+    color: @font-color;
+    height: @title-height;
+    line-height: @title-height;
 }
 
-.vui-modal {
-  position: relative;
-  width: 350px;
-  height: 200px;
-  top: 50%;
-  margin: -100px auto;
-  background: #fff;
-  text-align: center;
-}
