--- a/src/assets/less/variable.less
+++ b/src/assets/less/variable.less
@@ -1,7 +1,24 @@
 // font
-@font-family: "Helvetica Neue",Helvetica,"PingFang SC","Hiragino Sans GB","Microsoft YaHei","微软雅黑",Arial,sans-serif;
+@font-size-base: 12px;
+@font-size: 14px;
+@font-family: @font-size-base/1.5 "Helvetica Neue",Helvetica,"PingFang SC","Hiragino Sans GB","Microsoft YaHei","微软雅黑",Arial,sans-serif;
 
 
 //color
 @bg-shade: rgba(0, 0, 0, 0.9);
 @font-color: #333;
+
+
+@border-color-1: #ccc;
+@border-color-2: #E6E6E6;
+@border-radius-modal: 5px;
+@border-radius-button: 5px;
+
+
+//间距
+@modal-margin: 20px;
+@box-padding: 10px;
+
+
+//尺寸
+@title-height: 40px;
