--- a/src/assets/less/vui.less
+++ b/src/assets/less/vui.less
@@ -1,5 +1,6 @@
-@import "variable";
-@import "rest";
-@import "mixin";
-@import "common";
+@import url("variable");
+@import url("rest");
+@import url("mixin");
+@import url("common");
+@import url("temp");
 
