--- a/src/assets/less/mixin.less
+++ b/src/assets/less/mixin.less
@@ -100,7 +100,7 @@
     *display: inline;
     _display: inline;
   }
-  
+
   [v-cloak] {
     display: none;
   }
@@ -137,5 +137,20 @@
     color: @font-color;
     height: @title-height;
     line-height: @title-height;
+}
+
+.vui-box-shadow {
+  box-shadow: 0px 1px 5px 0px rgba(9, 2, 4, 0.3);
+  -moz-box-shadow: 0px 1px 5px 0px rgba(9, 2, 4, 0.3);
+  /*firefox*/
+  -webkit-box-shadow: 0px 1px 5px 0px rgba(9, 2, 4, 0.3);
+  /*webkit*/
+}
+.vui-box-shadow-2 {
+  box-shadow: 0px 1px 5px 0px rgba(9, 2, 4, 0.2);
+  -moz-box-shadow: 0px 1px 5px 0px rgba(9, 2, 4, 0.2);
+  /*firefox*/
+  -webkit-box-shadow: 0px 1px 5px 0px rgba(9, 2, 4, 0.2);
+  /*webkit*/
 }
 
