--- a/src/assets/less/mixin.less
+++ b/src/assets/less/mixin.less
@@ -154,3 +154,47 @@
   /*webkit*/
 }
 
+
+//font 设置
+//主标题
+.vui-font-title-main{
+    font-weight: bold;
+    font-size: 16px;
+    color: #333;
+}
+//副标题
+.vui-font-title-less{
+    font-weight: bold;
+    font-size: 14px;
+    color: #333;
+}
+//小标题
+.vui-font-title-mini{
+    font-weight: bold;
+    font-size: 12px;
+    color: #333;
+}
+//正文
+.vui-font-content{
+    font-size: 12px;
+    color: #333;
+}
+//辅助文字
+.vui-font-hand{
+    font-size: 12px;
+    color: #666;
+}
+//无效文字
+.vui-font-invalid{
+    font-size: 12px;
+    color: #999;
+}
+//连接文字
+.vui-font-link{
+    font-size: 12px;
+    color: #2d8cf0;
+    &:hover{
+        color: #57a3f3;
+    }
+}
+
