--- a/src/assets/less/variable.less
+++ b/src/assets/less/variable.less
@@ -22,3 +22,9 @@
 
 //尺寸
 @title-height: 40px;
+
+
+//color
+@primary-color: #8766FF;
+@light-color: #AF99FF;
+@dark-color: saturate(@primary-color, 80%);
