add less variable and add iconfont

--- a/src/assets/less/common.less
+++ b/src/assets/less/common.less
@@ -1,3 +1,5 @@
+
+//--- modal start---
 .vui-shade {
   z-index: 999999;
   width: 100%;
@@ -18,10 +20,7 @@
   border-radius: @border-radius-modal;
 
   .vui-modal-header {
-    // height: 40px;
-    // line-height: 40px;
-    border-bottom: 1px solid @border-color-2;
-    // margin-bottom: @modal-margin;
+    border-bottom: 1px solid @border-color-less;
     .vui-modal-title{
         .vui-title();
         margin-left: 20px;
@@ -44,7 +43,8 @@
     bottom: 0;
     height: 60px;
     line-height: 60px;
-    border-top: 1px solid @border-color-2;
+    border-top: 1px solid @border-color-less;
     padding-top: @box-padding;
   }
 }
+//--- modal end---
