--- a/src/assets/less/mixin.less
+++ b/src/assets/less/mixin.less
@@ -134,7 +134,7 @@
 
 .vui-title{
     font-size: @font-size;
-    color: @font-color;
+    color: @font-color-dark;
     height: @title-height;
     line-height: @title-height;
 }
