--- a/src/assets/less/rest.less
+++ b/src/assets/less/rest.less
@@ -118,18 +118,18 @@ button {
 input::-webkit-input-placeholder,
 textarea::-webkit-input-placeholder {
     /* WebKit browsers */
-    color: @font-color;
+    color: @font-color-main;
 }
 input:-moz-placeholder,
 textarea:-moz-placeholder {
     /* Mozilla Firefox 4 to 18 */
     opacity: 1;
-    color: @font-color;
+    color: @font-color-main;
 }
 input:-ms-input-placeholder,
 textarea:-ms-input-placeholder {
     /* Internet Explorer 10+ */
-    color: @font-color;
+    color: @font-color-main;
 }
 select::-ms-expand {
     /*fixed IE*/
