--- a/src/assets/less/variable.less
+++ b/src/assets/less/variable.less
@@ -22,6 +22,7 @@
 @dark-color: saturate(@primary-color, 80%);
 @border-color-main: #ccc;
 @border-color-less: tint(@border-color-main, 50%);
+@border-color-little: tint(@border-color-main, 25%);
 @bg-shade: rgba(0, 0, 0, 0.3);
 @font-color-dark: #333;
 @font-color-main: #666;
