--- a/src/assets/less/variable.less
+++ b/src/assets/less/variable.less
@@ -25,6 +25,9 @@
 @border-color-less: tint(@border-color-main, 50%);
 @border-color-little: tint(@border-color-main, 25%);
 @bg-shade: rgba(0, 0, 0, 0.3);
+@bg-shade-30: rgba(0, 0, 0, 0.3);
+@bg-shade-60: rgba(0, 0, 0, 0.6);
+@bg-shade-80: rgba(0, 0, 0, 0.8);
 @font-color-dark: #333;
 @font-color-main: #666;
 @font-color-light: #999;
