--- a/src/assets/less/variable.less
+++ b/src/assets/less/variable.less
@@ -3,12 +3,12 @@
 // font
 @font-size-base: 12px;
 @font-size: 14px;
-@font-family: @font-size-base/1.5 "Helvetica Neue",Helvetica,"PingFang SC","Hiragino Sans GB","Microsoft YaHei","微软雅黑",Arial,sans-serif;
+@font-family: @font-size-base/1.5 "Helvetica Neue", Helvetica, "PingFang SC",
+  "Hiragino Sans GB", "Microsoft YaHei", "微软雅黑", Arial, sans-serif;
 
 //间距
 @modal-margin: 20px;
 @box-padding: 10px;
-
 
 //尺寸
 @title-height: 40px;
@@ -16,10 +16,9 @@
 @border-radius-modal: 5px;
 @border-radius-button: 5px;
 
-
 //color
-@primary-color: #8766FF;
-@light-color: #AF99FF;
+@primary-color: #8766ff;
+@light-color: #af99ff;
 @dark-color: saturate(@primary-color, 80%);
 @border-color-main: #ccc;
 @border-color-less: tint(@border-color-main, 50%);
