--- a/src/assets/less/temp.less
+++ b/src/assets/less/temp.less
@@ -132,3 +132,70 @@
     }
 }
 //----tips css end ----
+
+//-----checkbox start-----
+.vui-checkbox{
+
+    span{
+        display: inline-block;
+        position: relative;
+        height: 20px;
+        padding-left: 28px;
+
+        &:before{
+            content: ' ';
+            position: absolute;
+            left: 0;
+            top: 0;
+            z-index: 1;
+            width: 18px;
+            height: 18px;
+            border-radius: 3px;
+            background: #7B7EA2;
+            -webkit-box-shadow:0 0 2px 2px rgba(112, 115, 148, 0.4);
+            -moz-box-shadow:0 0 2px 2px rgba(112, 115, 148, 0.4);
+            box-shadow:0 0 2px 2px rgba(112, 115, 148, 0.4);
+            -webkit-transition: background ease-in-out 0.4s;
+            -moz-transition: background ease-in-out 0.4s;
+            transition: background ease-in-out 0.4s;
+        }
+        &:after{
+            content: ' ';
+            position: absolute;
+            left: 2px;
+            top: 2px;
+            z-index: 2;
+            width: 14px;
+            height: 14px;
+            border-radius: 2px;
+            background: #E6E6EB;
+            -webkit-box-shadow:0 0 2px 2px rgba(112, 115, 148, 0.4);
+            -moz-box-shadow:0 0 2px 2px rgba(112, 115, 148, 0.4);
+            box-shadow:0 0 2px 2px rgba(112, 115, 148, 0.4);
+            -webkit-transition: background ease-in-out 0.4s;
+            -moz-transition: background ease-in-out 0.4s;
+            transition: background ease-in-out 0.4s;
+        }
+    }
+    [type=checkbox]{
+        &:checked ~ span:after{
+            /*加勾*/
+            content: '\2714';
+            color: #fff;
+            line-height: 6px;
+            font-size: 20px;
+            background: #7B7EA2;
+            -webkit-box-shadow:0 0 2px 2px rgba(112, 115, 148, 0);
+            -moz-box-shadow:0 0 2px 2px rgba(112, 115, 148, 0);
+            box-shadow:0 0 2px 2px rgba(112, 115, 148, 0);
+        }
+        &:checked ~ span:before{
+            background: #E6E6EB;
+        }
+    }
+
+}
+
+
+//------checkbox end------
+
