--- a/src/assets/less/variable.less
+++ b/src/assets/less/variable.less
@@ -1,21 +1,23 @@
 //函数tint混合白色
-
 // font
 @font-size-base: 12px;
 @font-size: 14px;
-@font-family: @font-size-base/1.5 "Helvetica Neue", Helvetica, "PingFang SC",
-"Hiragino Sans GB", "Microsoft YaHei", "微软雅黑", Arial, sans-serif;
-
+@font-family: @font-size-base/1.5 "Helvetica Neue",
+Helvetica,
+"PingFang SC",
+"Hiragino Sans GB",
+"Microsoft YaHei",
+"微软雅黑",
+Arial,
+sans-serif;
 //间距
 @modal-margin: 20px;
 @box-padding: 10px;
-
 //尺寸
 @title-height: 40px;
 @border-radius: 3px;
 @border-radius-modal: 5px;
 @border-radius-button: 5px;
-
 //color
 @primary-color: #8766ff;
 @light-color: #af99ff;
