--- a/src/assets/less/temp.less
+++ b/src/assets/less/temp.less
@@ -157,8 +157,8 @@
             left: 0;
             top: 0;
             z-index: 1;
-            width: 18px;
-            height: 18px;
+            width: 16px;
+            height: 16px;
             border-radius: 3px;
             background: #7B7EA2;
             -webkit-box-shadow: 0 0 2px 2px rgba(112, 115, 148, 0.4);
@@ -174,8 +174,8 @@
             left: 2px;
             top: 2px;
             z-index: 2;
-            width: 14px;
-            height: 14px;
+            width: 12px;
+            height: 12px;
             border-radius: 2px;
             background: #E6E6EB;
             -webkit-box-shadow: 0 0 2px 2px rgba(112, 115, 148, 0.4);
@@ -186,19 +186,85 @@
             transition: background ease-in-out 0.4s;
         }
     }
-    [type=checkbox] {
+    [type=checkbox],
+    [type=radio] {
         &:checked~.vui-checkbox:after {
             /*加勾*/
             content: '\2714';
             color: #fff;
             line-height: 6px;
-            font-size: 20px;
+            font-size: 18px;
             background: #7B7EA2;
             -webkit-box-shadow: 0 0 2px 2px rgba(112, 115, 148, 0);
             -moz-box-shadow: 0 0 2px 2px rgba(112, 115, 148, 0);
             box-shadow: 0 0 2px 2px rgba(112, 115, 148, 0);
         }
         &:checked~.vui-checkbox:before {
+            background: #E6E6EB;
+        }
+    }
+}
+
+.vui-radio-warp {
+    margin-right: 5px;
+    .vui-dis-selected();
+    span {
+        display: inline-block;
+        vertical-align: top;
+    }
+    .vui-radio-text {
+        .vui-can-selected();
+        color: #666;
+        font-size: 14px;
+    }
+    .vui-radio {
+        position: relative;
+        height: 20px;
+        padding-left: 22px;
+        &:before {
+            content: ' ';
+            position: absolute;
+            left: 0;
+            top: 0;
+            z-index: 1;
+            width: 16px;
+            height: 16px;
+            border-radius: 50%;
+            background: #7B7EA2;
+            -webkit-box-shadow: 0 0 2px 2px rgba(112, 115, 148, 0.4);
+            -moz-box-shadow: 0 0 2px 2px rgba(112, 115, 148, 0.4);
+            box-shadow: 0 0 2px 2px rgba(112, 115, 148, 0.4);
+            -webkit-transition: background ease-in-out 0.4s;
+            -moz-transition: background ease-in-out 0.4s;
+            transition: background ease-in-out 0.4s;
+        }
+        &:after {
+            content: ' ';
+            position: absolute;
+            left: 3px;
+            top: 3px;
+            z-index: 2;
+            width: 10px;
+            height: 10px;
+            border-radius: 50%;
+            background: #E6E6EB;
+            -webkit-box-shadow: 0 0 2px 2px rgba(112, 115, 148, 0.4);
+            -moz-box-shadow: 0 0 2px 2px rgba(112, 115, 148, 0.4);
+            box-shadow: 0 0 2px 2px rgba(112, 115, 148, 0.4);
+            -webkit-transition: background ease-in-out 0.4s;
+            -moz-transition: background ease-in-out 0.4s;
+            transition: background ease-in-out 0.4s;
+        }
+    }
+    [type=radio] {
+        &:checked~.vui-radio:after {
+            color: #fff;
+            background: #7B7EA2;
+            -webkit-box-shadow: 0 0 2px 2px rgba(112, 115, 148, 0);
+            -moz-box-shadow: 0 0 2px 2px rgba(112, 115, 148, 0);
+            box-shadow: 0 0 2px 2px rgba(112, 115, 148, 0);
+        }
+        &:checked~.vui-radio:before {
             background: #E6E6EB;
         }
     }
