--- a/src/assets/less/temp.less
+++ b/src/assets/less/temp.less
@@ -205,6 +205,8 @@
     }
 }
 
+//------checkbox end------
+//-----radio start-----
 .vui-radio-warp {
     margin-right: 5px;
     .vui-dis-selected();
@@ -270,4 +272,4 @@
     }
 }
 
-//------checkbox end------
+//------radio end------
