--- a/src/assets/less/mixin.less
+++ b/src/assets/less/mixin.less
@@ -161,6 +161,21 @@
     user-select: none;
 }
 
+.vui-dib {
+    display: inline-block;
+    zoom: 1;
+    *display: inline;
+    _display: inline;
+}
+
+.vui-dib-vt {
+    display: inline-block;
+    zoom: 1;
+    *display: inline;
+    _display: inline;
+    vertical-align: top;
+}
+
 .vui-can-selected {
     -webkit-user-select: text;
     -moz-user-select: text;
