规范命名以及色彩体系

--- a/src/assets/less/vui.less
+++ b/src/assets/less/vui.less
@@ -3,4 +3,9 @@
 @import url("../iconfont/iconfont.css");
 @import url("mixin");
 @import url("common");
-@import url("temp");
+//组件样式
+@import url("components/button");
+@import url("components/input");
+@import url("components/dataTips");
+@import url("components/checkboxRadio");
+@import url("components/select");
