--- a/src/assets/less/mixin.less
+++ b/src/assets/less/mixin.less
@@ -2,107 +2,107 @@
 
 /*
 * project style
-* m_表示模块
-* f_表示功能
-* u_表示UI
+* m-表示模块
+* f-表示功能
+* u-表示UI
 */
 
-.m_out {
+.m-out {
     width: 100%;
     min-width: 1080px;
 }
 
-.m_in {
+.m-in {
     width: 1080px;
     margin: 0 auto;
 }
 
-.f_clear {
+.f-clear {
     zoom: 1;
 }
 
-.f_clear:before,
-.f_clear:after {
+.f-clear:before,
+.f-clear:after {
     display: table;
     content: "";
 }
 
-.f_clear:after {
+.f-clear:after {
     clear: both;
 }
 
-.f_dib {
+.f-dib {
     display: inline-block;
     zoom: 1;
     *display: inline;
-    _display: inline;
+    -display: inline;
 }
 
-.f_dbk {
+.f-dbk {
     display: block;
 }
 
-.f_hide {
+.f-hide {
     display: none;
 }
 
-.f_tal {
+.f-tal {
     text-align: left;
 }
 
-.f_tac {
+.f-tac {
     text-align: center;
 }
 
-.f_tar {
+.f-tar {
     text-align: right;
 }
 
-.f_filter {
+.f-filter {
     opacity: 0.5;
     filter: alpha(opacity=50);
     -moz-opacity: 0.5;
     -khtml-opacity: 0.5;
 }
 
-.f_hdmx {
+.f-hdmx {
     overflow: hidden;
     white-space: nowrap;
     text-overflow: ellipsis;
 }
 
-.f_float {
+.f-float {
     display: inline-block;
     display: inline-block;
     zoom: 1;
     *display: inline;
-    _display: inline;
+    -display: inline;
     text-spacing: -3px;
 }
 
-.f_left {
+.f-left {
     float: left;
 }
 
-.f_right {
+.f-right {
     float: right;
 }
 
 
 /*修复margin-top被父元素‘继承’问题*/
 
-.f_topbdr {
+.f-topbdr {
     border-top: 1px solid transparent;
 }
 
-.f_disselected {
+.f-disselected {
     -webkit-user-select: none;
     -moz-user-select: none;
     -ms-user-select: none;
     user-select: none;
 }
 
-.box_shadow {
+.box-shadow {
     box-shadow: 0px 1px 5px 0px rgba(9, 2, 4, 0.3);
     -moz-box-shadow: 0px 1px 5px 0px rgba(9, 2, 4, 0.3);
     /*firefox*/
@@ -110,7 +110,7 @@
     /*webkit*/
 }
 
-.box_shadow_2 {
+.box-shadow-2 {
     box-shadow: 0px 1px 5px 0px rgba(9, 2, 4, 0.2);
     -moz-box-shadow: 0px 1px 5px 0px rgba(9, 2, 4, 0.2);
     /*firefox*/
@@ -118,12 +118,12 @@
     /*webkit*/
 }
 
-.icon {
+.vui-icon {
     vertical-align: top;
     display: inline-block;
     zoom: 1;
     *display: inline;
-    _display: inline;
+    -display: inline;
 }
 
 [v-cloak] {
@@ -165,14 +165,14 @@
     display: inline-block;
     zoom: 1;
     *display: inline;
-    _display: inline;
+    -display: inline;
 }
 
 .vui-dib-vt {
     display: inline-block;
     zoom: 1;
     *display: inline;
-    _display: inline;
+    -display: inline;
     vertical-align: top;
 }
 
