--- a/src/assets/less/components/menu.less
+++ b/src/assets/less/components/menu.less
@@ -1,10 +1,10 @@
 @border-color: #EDEDED;
-.vui-select>ul {
+.vui-menu>ul {
     border: 1px solid @border-color;
     border-bottom: none;
 }
 
-.vui-select-items {
+.vui-menu-items {
     background: #fff;
     border-top: 1px solid @border-color-less;
     p {
@@ -27,16 +27,16 @@
     }
 }
 
-.select-items-enter-active {
+.menu-items-enter-active {
     transition: all .3s ease-in-out;
 }
 
-.select-items-leave-active {
+.menu-items-leave-active {
     transition: all .3s ease-in-out;
 }
 
-.select-items-enter,
-.select-items-leave-to {
+.menu-items-enter,
+.menu-items-leave-to {
     transform: translateX(5px);
     opacity: 0;
 }
