--- a/src/assets/less/vui.less
+++ b/src/assets/less/vui.less
@@ -8,4 +8,4 @@
 @import url("components/input");
 @import url("components/dataTips");
 @import url("components/checkboxRadio");
-@import url("components/select");
+@import url("components/menu");
