删除无用文件和规范命名

--- a/src/assets/less/vui.less
+++ b/src/assets/less/vui.less
@@ -6,6 +6,6 @@
 //组件样式
 @import url("components/button");
 @import url("components/input");
-@import url("components/dataTips");
-@import url("components/checkboxRadio");
+@import url("components/data-tips");
+@import url("components/checkbox-radio");
 @import url("components/menu");
