--- a/src/assets/less/components/menu.less
+++ b/src/assets/less/components/menu.less
@@ -11,6 +11,7 @@
         padding: 8px 10px;
         width: 100%;
         box-sizing: border-box;
+        transition: background ease-in-out 0.2s;
     }
     li {
         border-bottom: 1px solid @border-color-less;
@@ -24,6 +25,10 @@
             background: @light-color;
             color: #fff;
         }
+    }
+    a{
+        display: block;
+        transition: all ease-in-out 0.2s;
     }
 }
 
