--- a/src/assets/less/components/menu.scss
+++ b/src/assets/less/components/menu.scss
@@ -1,35 +1,34 @@
-@border-color: #EDEDED;
 .vui-menu>ul {
-    border: 1px solid @border-color;
+    border: 1px solid $border-color-less;
     border-bottom: none;
 }
 
 .vui-menu-items {
     background: #fff;
-    border-top: 1px solid @border-color-less;
+    border-top: 1px solid $border-color-litle;
     p {
         width: 100%;
         box-sizing: border-box;
         transition: background ease-in-out 0.2s;
     }
-    .vui-menu-custom{
+    .vui-menu-custom {
         padding: 8px 10px;
     }
-    a{
+    a {
         display: block;
         padding: 8px 10px;
         transition: all ease-in-out 0.2s;
     }
     li {
-        border-bottom: 1px solid @border-color-less;
+        border-bottom: 1px solid $border-color-litle;
         cursor: pointer;
         color: #333;
-        & > p:hover {
-            background: lighten(@border-color-less, 5%);
+        &>p:hover {
+            background: $border-color-litle;
             color: #333;
         }
-        &.vui-actived > p {
-            background: @light-color;
+        &.vui-actived>p {
+            background: $light-color;
             color: #fff;
         }
     }
