--- a/src/assets/less/components/data-tips.scss
+++ b/src/assets/less/components/data-tips.scss
@@ -7,15 +7,14 @@
         $top: 10px;
         $dis: 5px;
         $paddingTop: 5px;
-        $paddingLeft: 10;
+        $paddingLeft: 10px;
         &:before {
             content: attr(data-tips);
             position: absolute;
             z-index: 999;
             top: -100%;
-            left: 50%;
-            margin-left: -(50% + $paddingLeft + 'px');
-            margin-top: -($top + $dis + $paddingTop * 2);
+            left: -$paddingLeft;
+            margin-top: -($top + $dis + $paddingTop * 2+2);
             display: block;
             min-width: 100%;
             padding: $paddingTop $paddingLeft;
@@ -42,5 +41,9 @@
             border-top: $top solid $bg-shade-80;
             border-right: $left solid transparent;
         }
+    }
+    &.vui-data-tips-center:hover:before {
+        left: calc(50% + 10px); // margin-left: 10px;
+        transform: translate(-50%, 0);
     }
 }
